--- a/GroupProject.Rmd
+++ b/GroupProject.Rmd
@@ -225,6 +225,14 @@ p_hat <- boot_dist %>%
   summarize(ph = mean(stat)) %>%
   pull()
 
+confidence <- c(p_hat - 2*SE, p_hat + 2*SE)
+
+ggplot(boot_dist, aes(x = stat)) +
+  geom_density() + shade_confidence_interval(endpoints = confidence)
+
+#  geom_vline(xintercept = 0, color = "red", size = 2)
+
+#assuming sampling distribution is bell shaped this is a 95% confidence interval
 c(p_hat - 2*SE, p_hat + 2*SE)
 
 ```
